bk_ida/gccida/g1/output_call_frame_info
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_call_frame_info/src/dwarf2out.c:2432:36: error: use of undeclared identifier 'machine_mode'
v17 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v16->dw_fde_begin); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_call_frame_info/src/dwarf2out.c:2471:36: error: use of undeclared identifier 'machine_mode'
v21 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), l1); 
                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_call_frame_info/src/obj/dwarf2out.o] Error 1
